--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "module": "lib/esm/hypp.js",
   "scripts": {
     "build": "rollup --config",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "prepublishOnly": "npm run build",
     "test": "jest"
   },
   "repository": {
@@ -26,6 +29,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
+    "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3"
   }
