--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "hypp",
   "version": "0.0.3",
   "description": "A tiny library for building modern DOM nodes fast with (or without) JSX.",
-  "main": "lib/cjs/hypp.js",
-  "module": "lib/esm/hypp.js",
+  "main": "lib/cjs/server.js",
+  "module": "lib/esm/server.js",
+  "browser": {
+    "lib/cjs/server.js": "lib/cjs/browser.js",
+    "lib/esm/server.js": "lib/esm/browser.js"
+  },
   "scripts": {
     "build": "rollup --config",
     "clean": "rimraf lib",
@@ -32,5 +36,8 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3"
+  },
+  "dependencies": {
+    "param-case": "^2.1.1"
   }
 }
