--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "lib/esm/hypp.js",
   "scripts": {
     "build": "rollup --config",
-    "clean": "rimraf dist",
+    "clean": "rimraf lib",
     "prebuild": "npm run clean",
     "prepublishOnly": "npm run build",
     "test": "jest"
